Working on handle get/post/put actions

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "Host=localhost;Username=postgres;Password=pass;Database=data"
+    "DB": "Host=localhost;Database=tickets;Username=postgres;Password=pass;"
   }
 }
