InMemory database implementation for intergration tests

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=tickets;Username=postgres;Password=pass;",
     "DB": "Host=localhost;Database=tickets;Username=postgres;Password=pass;"
   }
 }
