--- a/tests/TicketSystem.IntegrationTests/TicketingSystem.IntegrationTests.csproj
+++ b/tests/TicketSystem.IntegrationTests/TicketingSystem.IntegrationTests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TicketingSystem\TicketingSystem.csproj" />
+    <ProjectReference Include="..\..\src\TicketingSystem\TicketingSystem.csproj" />
   </ItemGroup>
 
   <ItemGroup>
