--- a/src/TicketingSystem/appsettings.json
+++ b/src/TicketingSystem/appsettings.json
@@ -9,5 +9,31 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=tickets;Username=postgres;Password=pass;",
     "DB": "Host=localhost;Database=tickets;Username=postgres;Password=pass;"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Ticket management app"
+    }
   }
 }
